<resources>
    <string name="app_name">Memory</string>
    <string name="game_name">A1\nMatching</string>
    <string name="start_button_string">Start</string>
    <string name="high_scores_button_string">High Scores</string>
    <string name="select_difficulty_string">Select\nDifficulty</string>
    <string name="ez_button_string">ez</string>
    <string name="two_ez_button_string">2ez</string>
    <string name="not_ez_button_string">not ez</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="curScore">Clicks: </string>
    <string name="score_blank"></string>
    <string name="leaderboard">Leaderboard</string>
    <string name="name_blank"></string>
    <string name="final_score_string">0</string>


</resources>
